# secret_bot

./: .gitignore  README.md  pyproject.toml
src/secret_bot/: __init__.py  __main__.py
